# event_image_reconstruction_fibar-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  event_image_reconstruction_fibar.repos  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: ci.yaml
debian/: changelog  control  copyright  gbp.conf  rules
include/event_image_reconstruction_fibar/: approx_reconstructor.hpp  bag_to_frames.hpp  check_endian.hpp  fibar.hpp  frame_handler.hpp  ros_compat.hpp  time_offset.hpp  utils.hpp
launch/: fibar.launch.py  fibar_stereo.launch.py
rpm/: ros-humble-event-image-reconstruction-fibar.spec  ros-kilted-event-image-reconstruction-fibar.spec  ros-lyrical-event-image-reconstruction-fibar.spec  ros-rolling-event-image-reconstruction-fibar.spec  template.spec
src/: bag_to_frames_main.cpp  fibar.cpp  fibar_node.cpp  performance_test.cpp
